--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
         
        <p> Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p> 
        <h2>Benefícios</h2>
+       <ul>
+     <li>atendimento aos clientes</li>
+       <li>espaço diferenciado</li>
+       <li>localização</li>
+       <li>profissionais qualificados</li></ul>
 </body>
 </html>
