--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
        <li>espaço diferenciado</li>
        <li>localização</li>
        <li>profissionais qualificados</li></ul>
+       <img src="beneficios.jpg" alt="imagem de corte">
 </body>
 </html>
