--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
        <li>espaço diferenciado</li>
        <li>localização</li>
        <li>profissionais qualificados</li></ul>
-       <img src="beneficios.jpg" alt="imagem de corte">
+       <img class="imagembenefícios" src="beneficios.jpg" alt="imagem de corte">
 </body>
 </html>
