--- a/index.html
+++ b/index.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Barbearia alura </title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body> 
-  <img class="banner" src=" banner[1].jpg" alt="banner da barbearia">
-  <h1> Sobre a Barbearia Alura </h1>
-       <p>Localizada no coração da cidade a <strong>Barbearia Alura </strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p> 
 
-        <p> <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes". </strong>
-        </em>
-        </p>
-        
-       <p> Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p> 
-       <h2>Benefícios</h2>
-       <ul>
-     <li>atendimento aos clientes</li>
-       <li>espaço diferenciado</li>
-       <li>localização</li>
-       <li>profissionais qualificados</li></ul>
-       <img class="imagembenefícios" src="beneficios.jpg" alt="imagem de corte">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Barbearia alura </title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <img class="banner" src=" banner[1].jpg" alt="banner da barbearia">
+  <div>
+    <h1> Sobre a Barbearia Alura </h1>
+    <p>Localizada no coração da cidade a <strong>Barbearia Alura </strong> traz para o mercado o que há de melhor para o
+      seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada
+      dia.</p>
+
+    <p> <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes". </strong>
+      </em>
+    </p>
+
+    <p> Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de
+      excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+  </div>
+  <div>
+    <h2>Benefícios</h2>
+    <ul>
+      <li>atendimento aos clientes</li>
+      <li>espaço diferenciado</li>
+      <li>localização</li>
+      <li>profissionais qualificados</li>
+    </ul>
+    <img class="imagembenefícios" src="beneficios.jpg" alt="imagem de corte">
+    </div>
 </body>
+
 </html>
