--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
   <img class="banner" src=" banner[1].jpg" alt="banner da barbearia">
-  <div>
-    <h1> Sobre a Barbearia Alura </h1>
+  <div class="principal>
+hclass="principal> 
+    <h1 class="tituloCentralizado "> Sobre a Barbearia Alura </h1>
     <p>Localizada no coração da cidade a <strong>Barbearia Alura </strong> traz para o mercado o que há de melhor para o
       seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada
       dia.</p>
@@ -24,7 +25,7 @@
       excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
   </div>
   <div class="beneficios">
-    <h2>Benefícios</h2>
+    <h2 class="titulotituloCentralizado "> Benefícios</h2>
     <ul>
       <li>atendimento aos clientes</li>
       <li>espaço diferenciado</li>
